Journey to PWAs began here

--- a/index.html
+++ b/index.html
@@ -117,5 +117,7 @@
 		<div id="square8" class="tile free"></div>
 		<div id="square9" class="tile free"></div>
 	</div>
+	<script type="text/javascript" src="app.js"></script>
+
 </body>
 </html>
