--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<meta name="description" content="A simple tic tac toe game.">
 	<meta name="theme-color" content="#2980b9" />
 
-	<link href='http://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet'>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<link href='https://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet'>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css"  href="style.css">
 	<script type="text/javascript" src="script.js"></script>
 
