--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<meta name="theme-color" content="#2980b9" />
 
 	<link href='https://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet'>
+	<link rel=manifest href=manifest.json>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css"  href="style.css">
 	<script type="text/javascript" src="script.js"></script>
