--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="description" content="A simple tic tac toe game.">
 	<meta name="theme-color" content="#2980b9" />
-
+	<link rel="icon" href="images/ttc.png" type="image/png" />
 	<link href='https://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet'>
 	<link rel=manifest href=manifest.json>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
