--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="UFT-8">
-	<title>AunderwinceTicTacToe</title>
+	<title id="title">AunderwinceTicTacToe</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="description" content="A simple tic tac toe game.">
 	<meta name="theme-color" content="#2980b9" />
+	<meta name="author" content="Kelvin Kamau"/>
+	<meta name="keywords" content="tic tac toe, kelvin kamau, aunderwince, anne wachiya, game, kenya game developer, progressive web app"/>
 	<link rel="icon" href="images/ttc.png" type="image/png" />
 	<link href='https://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet'>
 	<link rel=manifest href=manifest.json>
@@ -116,6 +118,5 @@
 		<div id="square9" class="tile free"></div>
 	</div>
 	<script type="text/javascript" src="app.js"></script>
-
 </body>
 </html>
