--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 	<meta name="keywords" content="tic tac toe, kelvin kamau, aunderwince, anne wachiya, game, kenya game developer, progressive web app"/>
 	<link rel="icon" href="images/ttc.png" type="image/png" />
 	<link href='https://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet'>
-	<link rel=manifest href=manifest.json>
+	<link rel="manifest" href="manifest.json">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css"  href="style.css">
 	<script type="text/javascript" src="script.js"></script>
 
 
 	<style>
-
 		html {
 			font-family: 'Ubuntu', sans-serif;
 			font-weight: 400;
