--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 	<meta name="description" content="A simple tic tac toe game.">
 	<meta name="theme-color" content="#2980b9" />
 	<meta name="author" content="Kelvin Kamau"/>
+	<meta name="canonical" content="http://kelvinkamau.me/AunderwinceTicTacToe/>
 	<meta name="keywords" content="tic tac toe, kelvin kamau, aunderwince, anne wachiya, game, kenya game developer, progressive web app"/>
 	<link rel="icon" href="images/ttc.png" type="image/png" />
 	<link href='https://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet'>
 	<link rel="manifest" href="manifest.json">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css"  href="style.css">
+	<link rel="stylesheet" type="text/css"  href="style.css">
 	<script type="text/javascript" src="script.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        
 
 
 	<style>
