--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="author" content="Kelvin Kamau"/>
 	<meta name="canonical" content="http://kelvinkamau.me/AunderwinceTicTacToe/>
 	<meta name="keywords" content="tic tac toe, kelvin kamau, aunderwince, anne wachiya, game, kenya game developer, progressive web app"/>
-`	<link rel="canonical" href="http://kelvinkamau.me/AunderwinceTicTacToe/"/>
+	<link rel="canonical" href="http://kelvinkamau.me/AunderwinceTicTacToe/"/>
         <meta name="mobile-web-app-capable" content="yes"> 
         <meta name="apple-mobile-web-app-capable" content="yes">															     <link rel="icon" href="images/ttc.png" type="image/png" />
 	<link href='https://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet'>
