--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
     if ('serviceWorker' in navigator) {
         window.addEventListener('load', function () {
-                navigator.serviceWorker.register('/sw.js')
+                navigator.serviceWorker.register('/AunderwinceTicTacToe/sw.js')
                     .then(function () {
                         console.log("Service Worker Registered");
                     });
