--- a/index.html
+++ b/index.html
@@ -19,7 +19,28 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script type="text/javascript" src="script.js"></script>
-
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-89234800-1', 'auto');
+        ga('send', 'pageview');
+    </script>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-8616060779651714",
+            enable_page_level_ads: true
+        });
+    </script>
 
     <style>
         html {
@@ -105,7 +126,7 @@
         You play as <span class="purple">X</span> and the computer plays as <span class="black">O</span><br/>
         Start by choosing a square to play</p>
 
-    <p>X | O</p>
+    <p class="scoreset">X | O</p>
 </div>
 
 <div class="tic-tac-toe">
