--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UFT-8">
-    <title id="title">AunderwinceTicTacToe</title>
+    <title id="title">TicTacToe</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="A simple tic tac toe game.">
     <meta name="theme-color" content="#2980b9"/>
     <meta name="author" content="Kelvin Kamau"/>
     <meta name="keywords"
-          content="tic tac toe, kelvin kamau, aunderwince, anne wachiya, game, kenya game developer, progressive web app"/>
-    <link rel="canonical" href="https://www.kelvinkamau.app/AunderwinceTicTacToe/"/>
+          content="tic tac toe, kelvin kamau,game, kenya game developer, progressive web app"/>
+    <link rel="canonical" href="https://www.kelvinkamau.app/TicTacToe/"/>
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="icon" href="images/ttc.png" type="image/png"/>
@@ -120,7 +120,7 @@
 
 <div class="container">
 
-    <h1>Aunderwince<br>TicTacToe</h1>
+    <h1>TicTacToe</h1>
 
     <p>A simple game of tic tac toe to play<br/>
         You play as <span class="purple">X</span> and the computer plays as <span class="black">O</span><br/>
@@ -144,7 +144,7 @@
 
     if ('serviceWorker' in navigator) {
         window.addEventListener('load', function () {
-                navigator.serviceWorker.register('/AunderwinceTicTacToe/sw.js')
+                navigator.serviceWorker.register('/TicTacToe/sw.js')
                     .then(function () {
                         console.log("Service Worker Registered");
                     });
