--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
             color: #fff;
             font-size: 60px;
             text-align: center;
+			border-radius:12px;
         }
 
         .free {
