--- a/index.html
+++ b/index.html
@@ -122,9 +122,8 @@
 
     <h1>TicTacToe</h1>
 
-    <p>A simple game of tic tac toe to play<br/>
-        You play as <span class="purple">X</span> and the computer plays as <span class="black">O</span><br/>
-        Start by choosing a square to play</p>
+    <p>You play as <span class="purple">X</span> and the computer plays as <span class="black">O</span><br/>
+        Start by selecting a square to play</p>
 
     <p class="scoreset">X | O</p>
 </div>
