--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Kelvin Kamau"/>
     <meta name="keywords"
           content="tic tac toe, kelvin kamau,game, kenya game developer, progressive web app"/>
-    <link rel="canonical" href="https://www.kelvinkamau.app/TicTacToe/"/>
+    <link rel="canonical" href="https://kelvinkamau.github.io/TicTacToe"/>
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="icon" href="images/ttc.png" type="image/png"/>
@@ -20,27 +20,6 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <script type="text/javascript" src="script.js"></script>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-        ga('create', 'UA-89234800-1', 'auto');
-        ga('send', 'pageview');
-    </script>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({
-            google_ad_client: "ca-pub-8616060779651714",
-            enable_page_level_ads: true
-        });
-    </script>
 
     <style>
         html {
@@ -138,6 +117,10 @@
     <div id="square7" class="tile free"></div>
     <div id="square8" class="tile free"></div>
     <div id="square9" class="tile free"></div>
+</div>
+
+<div>
+    <button >Reset</button>
 </div>
 <script>
 
