chore(gameplay)minor bug fixes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UFT-8">
-    <title id="title">TicTacToe</title>
+    <title id="title">TicTacToe Titan</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="A simple tic tac toe game.">
@@ -28,10 +28,10 @@
 
 <div class="container">
 
-    <h1>TicTacToe</h1>
+    <h1>TicTacToe Titan</h1>
 
-    <p>You play as <span class="purple">X</span> and the computer plays as <span class="black">O</span><br/>
-        Start by selecting a square to play</p>
+    <p>Begin by choosing a square for your move.<br>You play as <span class="purple">X</span> and the computer as <span class="black">O</span><br>
+        </p>
 
         <p id="score-display" class="scoreset">[ You: 0 / Computer: 0 ]</p>
 
