gameplay migrated from jquery to vanillaJS

--- a/index.html
+++ b/index.html
@@ -15,12 +15,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="icon" href="images/ttc.png" type="image/png"/>
     <link href='https://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet'>
-    <link rel="manifest" href="manifest.json">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script type="text/javascript" src="script.js"></script>
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-
     
 </head>
 <body>
@@ -49,6 +45,9 @@
     <div id="square9" class="tile free"></div>
 </div>
 
+<div class="container">
+<p>Built by Kamau. <a href="https://github.com/kelvinkamau/TicTacToe" target="_blank"> <br>Contribute to the project</a></p>
+</div>
 <script>
 
     if ('serviceWorker' in navigator) {
